# home-server

./: .gitignore  Cargo.toml  Certificate.cs  CommanderEngine.cs  Configuration.cs  Configuration.fs  DirectoryWatcher.cs  DiskAccess.cs  DiskAccess.fs  Events.cs  Extensions.cs  HomeServer.csproj  LICENSE  MediaAccess.cs  Process.cs  Program.cs  Program.fs  README.md  Requests.cs  Requests.fs  ReverseProxy.fs  Routes.fs  Tracker.cs  Utils.fs  WebServer.fsproj  WebServer.service  home-server.csproj  home-server.sln  package-lock.json  package.json  server.fsproj  tsconfig.json
.cargo/: config.toml
Database/: DBContext.fs  Database.fsproj  Model.fs  Test.fs
Database/Migrations/: Migrations.csproj  MigrationsContext.cs
HomeServer/: HomeServer.csproj  Program.cs  Thumbnail.cs
Server/: Configuration.fs  DiskAccess.fs  Logging.fs  Program.fs  Requests.fs  ReverseProxy.fs  Routes.fs  Thumbnails.fs  server.fsproj
SuperFit/: Database.cs  Model.cs  Session.cs
Superfit/: Model.fs  Requests.fs  Superfit.fsproj
src/: commander-engine.ts  config.rs  disk_mount.rs  fireplayer.ts  http_server.rs  https_server.rs  index.ts  lib.rs  main.rs  main.ts  media_access.rs  remote.rs  requests.rs  routes.ts  thumbnail.rs  warp_utils.rs
src/warp_utils/: error.rs  mod.rs
webroot/: index.html  script.js  style.css
