[package]
name = "home-server"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
tokio-util = "0.6"
hyper = "0.14"
lexical-sort = "0.3"
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
warp-range = "2.0"
chrono = "0.4"
signal-hook = "0.3"
warp-reverse-proxy = "0.4"

# Pi 2/3/4 Added due to reqwest dependency problems when cross-compiling for RPi
[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10", features = ["vendored"] }