[package]
name = "home-server"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
hyper = "1.5.2"
lexical-sort = "0.3"
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
percent-encoding = "2.1"
warp-range = "2.0"
chrono = "0.4.39"
signal-hook = "0.3"
warp-reverse-proxy = "1.0.0"

# Pi 2/3/4 Added due to reqwest dependency problems when cross-compiling for RPi
[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10", features = ["vendored"] }