[package]
name = "home-server"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
lexical-sort = "0.3"
warp = { version = "0.3", features = ["tls", "compression"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
percent-encoding = "2.1"
warp-range = "3.0"
chrono = "0.4.39"
signal-hook = "0.3"
warp-reverse-proxy = "1.0.0"
image = "0.25.5"
futures-util = "0.3.31"
async-stream = "0.3.6"  
hyper = "0.14"

# Pi 2/3/4 Added due to reqwest dependency problems when cross-compiling for RPi
[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

